testdata/fixtures/audit/negative/shell_interp_neg_static_ts.ts
import * as child_process from "child_process";

function listDir(): void {
  child_process.exec("ls -la");
}
